{
    "name": "ExampleInputActions",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "706bc3ea-a881-405c-b802-e16f41ecae59",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "3d2f856e-6826-4642-a928-8ebb59f03f51",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "56f1b56c-dde1-46c5-910b-61557b9e48b7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookDirection",
                    "type": "Value",
                    "id": "1c64eb86-fd3c-4479-8b96-4d9e03e38458",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseWheel",
                    "type": "Value",
                    "id": "64e19621-a778-4d6f-8270-a4bbd1c94ffc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4cece72f-fc88-4929-8258-5b3a4ebe5090",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "7c279e35-eaa7-4b31-a47a-19f086cb5194",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1eb43bff-8005-441b-9fa3-206ee43a6a51",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "af50b665-ab24-4ce2-b5d5-03e8b61e90f4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "13d2e21d-f155-407d-8ed0-280aa24704e5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "094cafa2-80cc-4176-84cd-c3eb3479f099",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "959a5b00-e8ce-4286-b5d4-f18fefaf7557",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a28dadc-0f54-4f5d-99d6-f749868ab619",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ConsoleInput",
            "id": "ebfb5860-ac9d-4e19-aa46-5ba3460c9047",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "43569c20-df1c-4826-86e2-947aa67509ba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForceClose",
                    "type": "Button",
                    "id": "72f072a2-81dd-4d3e-991a-c05f10849787",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PageUp",
                    "type": "Button",
                    "id": "a9d066c4-2635-4e9d-b689-6554000c7f77",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PageDown",
                    "type": "Button",
                    "id": "cfdf2d6a-e675-461f-8f2c-dfa52f22e5ae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7ca68b9-de43-4f08-b7a3-ed135ee91d29",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99461c49-78bd-4b3b-92bb-6a1ecd1322af",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd6d0456-1338-44cd-8c4b-1a2095edcf00",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c75f070b-a1dc-48d5-b189-f91c0ba954e3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}